app/assets/stylesheets/saryan.scss
// Place all the styles related to the saryan controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
  //background: image-url('bgfilter2.jpg') no-repeat center center fixed;
  //-webkit-background-size: cover;
  //-moz-background-size: cover;
  //-o-background-size: cover;
  //background-size: cover;
}

#topbar {
  position: fixed;
  z-index: 100;
  width: 100%;
  //background: #1a1a1a;
  background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;

  //background: rgba(204,204,204,.5);
  //background: -webkit-linear-gradient(rgba(204,204,204,.5), rgba(166,166,166,.5)); /* For Safari 5.1 to 6.0 */
  //background: -o-linear-gradient(rgba(204,204,204,.5), rgba(166,166,166,.5)); /* For Opera 11.1 to 12.0 */
  //background: -moz-linear-gradient(rgba(204,204,204,.5), rgba(166,166,166,.5)); /* For Firefox 3.6 to 15 */
  //background: linear-gradient(rgba(204,204,204,.5), rgba(166,166,166,.5)); /* Standard syntax */

  -webkit-transform: scale3d(1,1,1);
  top: 0;

  -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
  -moz-box-shadow:    0px 3px 3px 0px rgba(0,0,0,0.75);
  box-shadow:         0px 3px 3px 0px rgba(0,0,0,0.75);

  .ink-navigation ul li {
    font-size: 14px;
    background: none;
  }
  .ink-navigation ul li a {
    background: none;
    padding: .7em 1em;
    //color: #bbb;
    color: white;
    //text-transform: uppercase;
    font-weight: 300;
    line-height: 24px;
  }
  .ink-navigation ul li a:hover {
    color: #fff;
    text-decoration: none;
    background: rgba(255, 255, 255, 0.1) none repeat scroll 0 0;;
    //color: rgba(81, 203, 238, 1);
  }
  .ink-navigation ul li a.logoPlaceholder:hover {
    //background: 0 0;
  }
  .ink-navigation ul li a.logoPlaceholder {
    text-transform: uppercase;
    background: none;
    margin-right: .5em;
    padding: .4em 0;
    font-weight: 500;
    font-size: 1.4em;
  }
  .ink-navigation ul li button.fa-bars {
    background: rgba(0, 0, 0, 0.0) none repeat scroll 0 0;
    font-size: 1.2em;
    color: #bbb;
    border: 0;
    padding: .8em .8em .8em 0;
    float: left;
  }
  ul.menu {
    background: none;
  }

}

//DRAWER

#topbar .ink-navigation ul.black li button.fa-bars:active,
#topbar .ink-navigation ul.black li button.fa-bars:focus,
#topbar .ink-navigation ul.black li button.fa-bars:hover {
  color: #fff;
  outline: 0;
}

body.ink-drawer .left-drawer, body.ink-drawer .right-drawer {
  background: #1e1e1e;
  //background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
}

body.ink-drawer .left-drawer li, body.ink-drawer .right-drawer li {
  display: block;
  margin: 0;
  font-weight: 300;
}

body.ink-drawer .left-drawer ul, body.ink-drawer .right-drawer ul {
  margin: 59px 0 0;
  padding: 0;
  list-style-type: none;
}

body.ink-drawer .left-drawer li>a:hover, body.ink-drawer .right-drawer li>a:hover {
  background: #333;
  color: #FFF;
}

body.ink-drawer .left-drawer li>a, body.ink-drawer .right-drawer li>a {
  display: block;
  padding: 6px 15px;
  color: #bbb;
  text-decoration: none;
  text-transform: uppercase;
  font-size: .875em;
}

// IMAGE

figure.ink-image {
  position: relative;
  border: none;

}
figure.ink-image > img {
  width: 100%;
}
figure.ink-image > figcaption {
  padding: 1em;
  background: #fff;
  font-weight: 300;
  line-height: 24px;
  //border: 1px solid rgba(0, 0, 0, 0.8);
  -webkit-box-shadow: 0px 2px 5px 3px rgba(0,0,0,0.5);
  -moz-box-shadow:    0px 2px 5px 3px rgba(0,0,0,0.5);
  box-shadow:         0px 2px 5px 3px rgba(0,0,0,0.5);
}
figure.ink-image h2 {
  font-weight: 300;
  line-height: 24px;
}
figure.ink-image > figcaption.over-top, figure.ink-image > figcaption.over-bottom {
  position: absolute;
  width: 100%;
  left: 0;
  border: none;
}
figure.ink-image > figcaption.over-top.dark, figure.ink-image > figcaption.over-bottom.dark {
  color: #fff;
  background: rgba(0, 0, 0, 0.6);
}
figure.ink-image > figcaption.over-top {
  top: 0;
  background: rgba(255, 255, 255, 0.7);
}
figure.ink-image > figcaption.over-bottom {
  bottom: 0;
  background: rgba(255, 255, 255, 0.7);
}
figure.ink-image > figcaption.dark {
  color: #fff;
  background: #222;
}

//FOOTER

.Footer {
  color: white;
  font-size: 14px;
  font-weight: 300;
  background: #1e1e1e;
  //background: -webkit-linear-gradient(#1e1e1e, #4d4d4d); /* For Safari 5.1 to 6.0 */
  //background: -o-linear-gradient(#1e1e1e, #4d4d4d); /* For Opera 11.1 to 12.0 */
  //background: -moz-linear-gradient(#1e1e1e, #4d4d4d); /* For Firefox 3.6 to 15 */
  //background: linear-gradient(#1e1e1e, #4d4d4d); /* Standard syntax */
  -webkit-box-shadow: 0px -3px 3px 0px rgba(0, 0, 0, 0.5);
  -moz-box-shadow:    0px -3px 3px 0px rgba(0, 0, 0, 0.5);
  box-shadow:         0px -3px 3px 0px rgba(0, 0, 0, 0.5);

  p {
    font-weight: 300;
    padding-top: 20px;
  }

  ul li a {
    color: white;
    font-weight: 300;

  }
  ul li a:hover {
    text-decoration: none;
    color: rgba(81, 203, 238, 1);
  }
}

//HOME

.Home {

  h1 {
    font-weight: 300;
    color: rgba(81, 203, 238, 1);
  }

  .Register {
    background:rgba(255, 255, 255, 0.7);
    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.5);
    -moz-box-shadow:    0px 0px 5px 2px rgba(0,0,0,0.5);
    box-shadow:         0px 0px 5px 2px rgba(0,0,0,0.5);
  }
  .ink-button.black {
    border-radius: 3px;
  }
  .ink-button.black:hover {
    background: #1e1e1e;
    background: -webkit-linear-gradient(#1e1e1e, #4d4d4d); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#1e1e1e, #4d4d4d); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#1e1e1e, #4d4d4d); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#1e1e1e, #4d4d4d); /* Standard syntax */
  }
  //PARALLAX
  /* ============================================================
    PRIMARY STRUCTURE
  ============================================================ */
  .container {
  max-width: 960px;
  margin: 0 auto;
  }

  /* ============================================================
    SECTIONS
  ============================================================ */
  section.module:last-child {
    margin-bottom: 0;
  }
  section.module h2 {
    margin-bottom: 40px;
    //font-family: "Roboto Slab", serif;
    //font-size: 30px;
    font-weight: 300;
    line-height: 24px;
  }
  section.module p {
    margin-bottom: 40px;
    font-size: 16px;
    font-weight: 300;
    line-height: 24px;
  }
  section.module p:last-child {
    margin-bottom: 0;
  }
  section.module.content {
    padding: 40px 0;
  }
  section.module.parallax {
    padding: 240px 0;
    background-position: 0 0;
  }
  section.module.parallax h1 {
    color: #1e1e1e;
    font-size: 48px;
    //line-height: 1;
    font-weight: 300;
    line-height: 24px;
    //font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    text-shadow: 0 0 5px white;
  }
  section.module.parallax h3 {
    color: white;
    font-size: 40px;
    //line-height: 1;
    font-weight: 300;
    line-height: 24px;
    //font-weight: 700;
    text-align: center;
    //text-shadow: 0 0 5px white;
  }
  section.module.parallax-1 {
    background-image: url("home1.jpeg");
    background-size: cover;

    -moz-box-shadow:    inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
    -webkit-box-shadow: inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
    box-shadow:         inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
  }
  section.module.parallax-2 {
    background-image: url("home2.jpeg");
    background-size: cover;

    -moz-box-shadow:    inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
    -webkit-box-shadow: inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
    box-shadow:         inset  0  8px 8px -8px #000000,
                        inset  0 -8px 8px -8px #000000;
  }

  @media all and (min-width: 600px) {
    section.module h2 {
      font-size: 42px;
    }
    section.module p {
      font-size: 20px;
    }
    section.module.parallax {
      padding: 200px 0;
    }
    section.module.parallax h1 {
      font-size: 48px;
    }
  }
  @media all and (min-width: 960px) {
    section.module.parallax h1 {
      font-size: 100px;
    }
  }
}
//END HOME

